<resources>
    <string name="app_name">Gym is Life</string>
    <string name="valGymLife">Gym is Life</string>
    <string name="valBtnIniciar">Iniciar Sesión</string>
    <string name="valbtnRegistro">Registrarse</string>
    <string name="valbtnCancelar">Cancelar</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valBtnHistClases">Historial de Clases</string>
    <string name="valBtnMiHorario">Mi horario</string>
    <string name="valTvMetaDia">Meta del día</string>
    <string name="valBtnSoporte">Soporte</string>
    <string name="valBtnCarnVirt">Mi Carnet Virtual</string>
    <string name="valBtnMisDat">Mis Datos</string>
    <string name="valNavInicio">Inicio</string>
    <string name="valNavHorario">Horario</string>
    <string name="valNavActividad">Actividad</string>
    <string name="valNavCuenta">Cuenta</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="valBtnContAdmin">Actualizar</string>
    <string name="valNavUsuarios">Usuarios</string>
    <string name="valNavActividades">Actividades</string>
    <string name="valNavAdministrador">Mi Perfil</string>
    <string name="twRenovarM">Renovar membresía</string>
    <string name="fin">Fin:</string>
    <string name="dni">DNI:</string>
    <string name="btnVolverAdmin2">Actualizar Membresía</string>
    <string name="ver">Ver</string>
    <string name="ActualizarM">Actualizar Membresía</string>
    <string name="valBtnVer">Ver</string>
    <string name="valBtnEditarClase">Editar</string>
    <string name="valBtnInscribirse">Inscribirse</string>
    <string name="valBtnBuscar">Buscar Clase</string>

    <string-array name="Disciplina">
        <item>Judo</item>
        <item>Baile</item>
        <item>Spinning</item>
        <item>calistenia</item>
    </string-array>

    <string-array name="Nivel">
        <item>Principiante</item>
        <item>Intermedio</item>
        <item>Avanzado</item>
    </string-array>

    <string-array name="Instructor">
        <item>Fiorella Gomez</item>
        <item>José Bazán</item>
        <item>Martin Vizcarra</item>
    </string-array>

    <string-array name="Salon">
        <item>SalonA</item>
        <item>SalonB</item>
        <item>SalonC</item>
    </string-array>
</resources>