<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3BBBB"
    tools:context=".Inicio.ui.Fragments.ActividadFragment">

    <Button
        android:id="@+id/btnHorario"
        android:layout_width="292dp"
        android:layout_height="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="100dp"
        android:text="@string/valBtnMiHorario"
        android:textColor="#FFCDD2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="44dp"
        android:text="@string/valBtnHistClases"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnBuscarClases2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imgBtnBuscarClases2"
        android:layout_width="297dp"
        android:layout_height="131dp"
        android:layout_marginBottom="44dp"
        android:src="@drawable/imgbuscarclases"
        app:layout_constraintBottom_toTopOf="@+id/btnHorario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitleMD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="70dp"
        android:text="@string/valTvMetaDia"
        android:textColor="#0E0E0E"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvMetaDia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <TextView
        android:id="@+id/tvMetaDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="Hacer 3 series de 10 repeticiones de pecho"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>